@@ -23,6 +23,7 @@
 - pass map_source as function paramter where possible.
 - check for bind onto self in mount_bind.c.
 - fix symlink expire.
+- dont clobber mapent for negative cache.
 
 17/10/2013 autofs-5.0.8
 =======================
